add csv writing

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/tehnuge/rsiAlert#readme",
   "dependencies": {
     "alphavantage": "^2.0.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0"
   }
 }
